source/tests/errors/number_cannot_convert_table.apex
x = number(["xyu" = 5])